--- a/src/App.css
+++ b/src/App.css
@@ -208,6 +208,7 @@
   border-radius: 20px;
   box-shadow: 0 20px 40px rgba(0,0,0,0.1);
   transition: transform 0.3s ease;
+  background: #d8dbdf;
 }
 
 
@@ -383,6 +384,10 @@
   padding: 80px 0 40px;
   position: relative;
   z-index: 1;
+}
+
+.footer-top, .container, .row {
+  justify-content: center;
 }
 
 /* Logo y descripción */
